--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-insta-stories": "^2.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-time-ago": "^6.2.2",
+    "react-webcam": "^5.2.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
