--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.5",
     "react-time-ago": "^6.2.2",
     "react-webcam": "^5.2.3",
     "redux": "^4.0.5",
