gitignore file modified

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,11 @@
 
 # production
 /build
-
+.firebaserc
+firebase.json
+firestore.indexes.json
+firestore.rules
+.firebase
 # misc
 .DS_Store
 .env.local
