--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-insta-stories": "^2.1.3",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
